src/components/appheader.main.less
/**
 * Copyright © 2018 Elastic Path Software Inc. All rights reserved.
 *
 * This is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This software is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this license. If not, see
 *
 *     https://www.gnu.org/licenses/
 *
 *
 */

@import './../style/common.less';

.app-header {
  z-index: 5;

  .main-container {
    min-height: 60px;
    display: flex;
    width: 100%;
    padding-right: 10px;
    background-color: @mainColor;

    .toggle-btn-container {
      .back-btn {
        border: 0;
        background-color: transparent;
        padding: 16px 10px 10px;
        cursor: pointer;

        .icon {
          color: #fff;
          font-size: 20px;
        }
      }
    }

    .logo-container {
      padding-left: 25px;
      padding-top: 4px;

      .logo {
        padding: 15px;
        display: block;

        .logo-image {
          height: 20px;
        }
      }
    }

    .central-container {
      flex: 1;
      text-align: center;
      padding: 14px 0;
      margin: 0 auto;

      .horizontal-menu{
        padding-left:120px;
      }
    }

    .search-container {
      padding-top: 20px;
      padding-left: 5px;
      padding-right: 9px;
    }

    .login-container {
      padding-top: 20px;
      padding-left: 5px;
      padding-right: 9px;
    }

    .cart-link-container {
      margin-right:20px;
      padding-top: 20px;
      padding-left: 9px;
      padding-right: 9px;

      .cart-link {
        display: block;
        width: 23px;
        padding: 10px;
        height: 21px;
        background: #ffffff00 url(../images/header-icons/bag-icon.png) no-repeat 0px;
        background-position: center top;
        line-height: 0;
        font-size: 0;
        background-size: cover;
        position: relative;

        .cart-link-counter {
          right: 0;
          left: unset;
          transform: translate(25%, -25%);
        }
      }
    }

    .locale-container {
      width: 120px;
      text-align: right;
      padding-top: 27px;
      padding-right: 20px;
    }

    .toggle-btn-container {
      display: none;

      .toggle-btn {
        border: 0;
        background-color: transparent;
        padding: 16px 10px 10px;
        cursor: pointer;

        .icon {
          color: #fff;
          font-size: 22px;
        }
      }
    }

    .search-toggle-btn-container {
      display: none;
    }
  }

  .cart-link-counter {
    text-align: center;
    position: absolute;
    background-color: @mainBlueColor;
    min-width: 16px;
    height: 16px;
    font-size: 12px;
    line-height: 16px;
    border-radius: 50%;
    color: white;
    top: 0;
    left: 0;
    font-weight: bold;
  }

  .collapsable-container {
    display: none;
  }

  @media (max-width: @tabletWidth - 1px) {
    .main-container {
      position: relative;
      justify-content: flex-end;

      .logo-container {
        padding-left: 0px;
        padding-top: 0px;
        display: block;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%,-50%);
      }

      .central-container {
        display: none;
      }

      .search-container {
        display: inline-block;
      }

      .login-container {
        display: inline-block;
      }

      .cart-link-container {
        display: inline-block;
        margin-right: 5px;
      }

      .locale-container {
        display: none;
      }

      .toggle-btn-container {
        position: absolute;
        left: 10px;
        display: block;
      }

      &.in-standalone {
        .toggle-btn-container {
          left: 0px;
        }
      }
    }

    .collapsable-container {
      display: block;
      background-color: #f7f7f7;
      box-shadow: 0px 4px 4px -2px rgba(0, 0, 0, 0.5);

      .mobile-locale-container {
        padding: 20px 0 0 5px;
      }

      .mobile-cart-link-container {
        text-align: center;
        text-transform: uppercase;
        padding: 5px 0px 5px 0px;

        a {
          color: @mainColor;
          font-size: 19px;
          font-weight: bold;
          display: block;
          text-decoration: none;
          height: 47px;

          div {
            padding: 10px 0px 10px 0px;
          }

          .cart-link-counter-container {
            display: inline;
            position: relative;
          }
        }
      }

      .mobile-navigation-separator {
        border-top: 1px solid @mainColor;
        width: 85%;
      }

      .mobile-navigation-container {
        padding-top: 10px;
        padding-bottom: 10px;
      }

      .cart-link:active {
        background-color: #ccc;
      }

      .mobile-login-container {
        text-align: center;

        .login-btn {
          text-transform: uppercase;
          font-weight: bold;
        }
      }
    }
  }

  @media (max-width: @mobileWidth - 1px) {
    .main-container {
      .logo-container {
        padding-left: 0;
        padding-top: 0;
        display: block;
        position: absolute;
        left: 100px;
      }

      .search-container {
        display: none;
      }

      .search-toggle-btn-container {
        padding-top: 18px;
        display: block;

        .search-toggle-btn {
          border: none;
          background: none;

          .search-icon {
            background: #ffffff00 url('../images/header-icons/magnifying-glass.png') no-repeat 9px center;
            width: 35px;
            height: 21px;
          }
        }
      }

      &.in-standalone {
        .logo-container {
          left: 130px;
        }
      }
    }
  }

  .network-offline {
    &.alert {
      padding: 15px;
    }

    &.alert-primary {
      text-align: center;
      z-index: 1;
      width: 50%;
      position: absolute;
      left: 25%;
    }

    &.fade.in {
      opacity: 1;
    }
  }
}

